--- a/pages/characters.html
+++ b/pages/characters.html
@@ -9,8 +9,16 @@
 <body>
     <div>
         <h1>Characters</h1>
-        <p>Characters are obtainable units in <b>Genshin Impact.</b> They come in different qualities, are aligned with an Element, equipable with a specific Weapon, and belong to a Region.</p>        
-        <p>Most characters have a total of 3 Combat Talents and 3 Passive Talents. Combat Talents, which include Normal Attack, Elemental Skill, and Elemental Burst, and can be leveled from Lv. 1 to Lv. 10, while Passive Talents, which include 1st Ascension Passive, 4th Ascension Passive, Utility Passive, cannot be leveled. Increasing the level can increase the scaling and effects of Combat Talents.</p>
+        <p>
+            Characters are obtainable units in <b>Genshin Impact.</b> They come in different qualities, are aligned with an Element,
+            equipable with a specific Weapon, and belong to a Region.
+        </p>        
+        <p>
+            Most characters have a total of 3 Combat Talents and 3 Passive Talents. Combat Talents, which include Normal Attack,
+            Elemental Skill, and Elemental Burst, and can be leveled from Lv. 1 to Lv. 10, while Passive Talents, which include 
+            1st Ascension Passive, 4th Ascension Passive, Utility Passive, cannot be leveled. Increasing the level can increase
+            the scaling and effects of Combat Talents.
+        </p>
     </div>
     <div>
         <img src="./assets/last-img.jpg" alt="characters selection">
